--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="sign_in">SignIn</string>
     <string name="did_you_forget_your_password">did tou forget your password?</string>
     <string name="don_t_you_have_an_account_yet_register_a_new_acount">don\'t you have an account yet? Register a new one!</string>
+    <string name="title_activity_login2">login2</string>
 
 </resources>
