--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,5 @@
     <string name="confirm_password">Confirm Password</string>
     <string name="password_confirmation">Password confirmation</string>
     <string name="register">Register</string>
-
+    <string name = "splash_Screen">Wait a short while. We\'re preparing everything for you</string>x
 </resources>
