--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="weight">Weight:</string>
     <string name="gender">Gender:</string>
     <string name="please_wait">Please, wait while we prepare everything for you...</string>
+    <string name="preference_file_key">com.example.tinder.PREFERENCE_FILE_KEY</string>
 </resources>
