--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="your_username">Your Username</string>
     <string name="your_password">Your Password</string>
     <string name="username">Username</string>
-    <string name="displaynam">Display Name</string>
+    <string name="display_name">Display Name</string>
     <string name="password">Password</string>
     <string name="remember_me">Remember me</string>
     <string name="sign_in">Sign In</string>
@@ -16,11 +16,11 @@
     <string name="password_confirmation">Password confirmation</string>
     <string name="register">Register</string>
     <string name="name">Name:</string>
-    <string name="AboutMe">About Me:</string>
-    <string name="Age">Age:</string>
-    <string name="heigh">Height:</string>
+    <string name="about_me">About Me:</string>
+    <string name="age">Age:</string>
+    <string name="height">Height:</string>
     <string name="weight">Weight:</string>
     <string name="gender">Gender:</string>
-    <string name="please_wait">Please, wait while we prepare everything for you...</string>
+    <string name="please_wait">Please, wait while we prepare everything for you…</string>
     <string name="preference_file_key">com.example.tinder.PREFERENCE_FILE_KEY</string>
 </resources>
