--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,8 @@
     <string name="about_me">About Me:</string>
     <string name="age">Age:</string>
     <string name="height">Height:</string>
+    <string name="message">Write your message here</string>
+    <string name="SendButton">Send</string>
     <string name="weight">Weight:</string>
     <string name="gender">Gender:</string>
     <string name="please_wait">Please, wait while we prepare everything for you…</string>
