--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="your_username">Your Username</string>
     <string name="your_password">Your Password</string>
     <string name="username">Username</string>
-    <string name="display_name">Display Name</string>
+    <string name="display_name">Name:</string>
     <string name="password">Password</string>
     <string name="remember_me">Remember me</string>
     <string name="sign_in">Sign In</string>
